--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
     "start": "parcel",
-    "build": "parcel build"
+    "build": "parcel build",
+    "test": "jest --verbose --coverage --runInBand"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,12 @@
   },
   "homepage": "https://github.com/arthurvmdantas/design-patterns-typescript#readme",
   "devDependencies": {
-    "parcel": "^2.2.1"
+    "@types/jest": "^27.4.0",
+    "jest": "^27.4.7",
+    "parcel": "^2.2.1",
+    "ts-jest": "^27.1.3"
+  },
+  "alias": {
+    "creational": "./src/creational"
   }
 }
